(library
    (name sdl2)
    (public_name sdl2)
    (js_of_ocaml (javascript_files sdl2_stubs.js))
    (libraries
        lwt
        reglm)
    (library_flags (:include flags.sexp))
    (c_flags (:include c_flags.sexp))
    (cxx_names sdl2_wrapper)
    (cxx_flags (:include cxx_flags.sexp)))

(rule
    (targets c_flags.sexp cxx_flags.sexp flags.sexp)
    (deps (:discover ../config/discover.exe))
    (action (run %{discover})))
